Updated index files

--- a/index.html
+++ b/index.html
@@ -21,36 +21,35 @@
 
     <header>
       <img src="images/Portrait.jpg" alt="Picture of Adam Pizzo" class="profile-image">
-      <h1 class="tag name">Hello, I’m Adam.</h1>
-      <p class="tag location">My hometown is Durham, North Carolina.</p>
+      <h1 class="tag name">Adam Pizzo</h1>
+      <p class="tag location">Coding out of Durham, NC</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2 class="card-title">Background</h2>
-        <ul>
-          <li>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs.</li>
-          <li>I’m excited to bring my life experience to the process of building fantastic looking websites.</li>
-          <li>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</li>
-          <li><a href="#">Check out my Lineage Guild website!</a></li>
-          <li>To learn more, <a href="resume.html" target="_blank">view my resume.</a></li>
-        </ul>
-
-        
-        <h3>A New Subsection</h3>
+        <ul class="background-info">
+          <li>I am a technology enthusiast, gamer, novice front end web developer, and more.</li>
+          <li>I love learning and hope this tech degree will help me become a more skilled and knowledgeable person.</li>
+          <li>I have a passion for helping others and helping them become the best they can be.</li>
+        </ul>                
       </div> 
         
       <div class="card">
         <h2 class="card-title">Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>During my tech degree training I want to learn about:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
           <li>Node</li>
           <li>React</li>
+          <li>Python</li>
+          <li>C#</li>
+          <li>ASP .Net</li>
+          <li>and more!</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I want to bring this knowledge back to my current employer and revolutionize how we present our company to others.</p>
       </div> 
 
     </main>
