--- a/experience.html
+++ b/experience.html
@@ -15,19 +15,19 @@
             <li class="name">Adam Pizzo</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Experience</a></li>
-            <li><a href="#">Photos</a></li>
-            <li><a href="#">Contact</a></li>     
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="stream.html">Stream</a></li>
             </ul>
         </div>
     </nav>
     
-    <header>
+    <header class="main-header">
         <img src="images/Portrait.jpg" alt="Picture of Adam Pizzo" class="profile-image">
-        <h1 class="tag name">Hello, I’m Adam.</h1>
-        <p class="tag location">My hometown is Durham, North Carolina.</p>
+        <h1 class="tag name">Adam Pizzo</h1>
+      <p class="tag location">Coding out of Durham, NC</p>
     </header>
 
-    <main class="flex">
+    <main class="main-section">
         <div class="card">
           <h2 class="card-title">Education</h2>
           <h3 >East Carolina University</h3>
@@ -61,7 +61,7 @@
             <h3>Carolina Meadows</h3>
             <ul>
                 <li>Systems Administrator</li>
-                <li>2015-2015</li>                
+                <li>2014-2015</li>                
             </ul>
             <h3>SoundSide Group</h3>
             <ul>
@@ -70,7 +70,7 @@
             </ul>
         </div>
     </main>
-    <footer>
+    <footer class="main-footer">
             <ul>
               <li><a href="https://www.twitter.com/atlasventuretv" class="social twitter" target="_blank">Twitter</a></li>
               <li><a href="https://linkedin.com/in/adampizzo" class="social linkedin" target="_blank">LinkedIn</a></li>
