--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
         <ul class="nav">
           <li class="name">Adam Pizzo</li>
           <li><a href="#">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="#">Photos</a></li>
-          <li><a href="#">Contact</a></li>
-          
+          <li><a href="experience.html">Experience</a></li>          
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="stream.html">Stream</a></li>
         </ul>
     </div>
 
-    <header>
+    <header class="main-header">
       <img src="images/Portrait.jpg" alt="Picture of Adam Pizzo" class="profile-image">
       <h1 class="tag name">Adam Pizzo</h1>
       <p class="tag location">Coding out of Durham, NC</p>
     </header>
 
-    <main class="flex">
+    <main class="main-section">
       <div class="card">
         <h2 class="card-title">Background</h2>
         <ul class="background-info">
           <li>I am a technology enthusiast, gamer, novice front end web developer, and more.</li>
           <li>I love learning and hope this tech degree will help me become a more skilled and knowledgeable person.</li>
           <li>I have a passion for helping others and helping them become the best they can be.</li>
+          <li>In my spare time, I code, play video games, and occasionally stream on <a href="https://www.twitch.com/atlasventure">Twitch</a>.</li>
         </ul>                
       </div> 
         
@@ -53,7 +53,7 @@
       </div> 
 
     </main>
-    <footer>
+    <footer class="main-footer">
       <ul>
         <li><a href="https://www.twitter.com/atlasventuretv" class="social twitter" target="_blank">Twitter</a></li>
         <li><a href="https://linkedin.com/in/adampizzo" class="social linkedin" target="_blank">LinkedIn</a></li>
