validated HTML/CSS. Polished code.

--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="main-section">
-        <div class="card">
+        <section class="card">
           <h2 class="card-title">Education</h2>
           <h3 >East Carolina University</h3>
           <ul>
@@ -44,9 +44,9 @@
               <li>Graduated - 2008</li>
               <li>Honors - Magna Cum Laude</li>
           </ul>
-        </div>
+        </section>
 
-        <div class="card">
+        <section class="card">
             <h2 class="card-title">Work Experience</h2>
             <h3>Carolina Meadows</h3>
             <ul>
@@ -68,15 +68,15 @@
                 <li>Information Support Specialist</li>
                 <li>2013-2014</li>                
             </ul>
-        </div>
+        </section>
     </main>
     <footer class="main-footer">
-            <ul>
-              <li><a href="https://www.twitter.com/atlasventuretv" class="social twitter" target="_blank">Twitter</a></li>
-              <li><a href="https://linkedin.com/in/adampizzo" class="social linkedin" target="_blank">LinkedIn</a></li>
-              <li><a href="https://github.com/adampizzo" class="social github" target="_blank">Github</a></li>
-            </ul>
-            <copyright class="copyright">&copy;2019, Adam Pizzo</copyright>
-          </footer>
+        <ul>
+            <li><a href="https://www.twitter.com/atlasventuretv" class="social twitter" target="_blank">Twitter</a></li>
+            <li><a href="https://linkedin.com/in/adampizzo" class="social linkedin" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/adampizzo" class="social github" target="_blank">Github</a></li>
+        </ul>
+        <small class="copyright">&copy;2019, Adam Pizzo</small>
+    </footer>
 </body>
 </html>
