--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Adam Pizzo</li>
           <li><a href="#">Home</a></li>
@@ -16,7 +16,7 @@
           <li><a href="projects.html">Projects</a></li>
           <li><a href="stream.html">Stream</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header class="main-header">
       <img src="images/Portrait.jpg" alt="Picture of Adam Pizzo" class="profile-image">
@@ -25,7 +25,7 @@
     </header>
 
     <main class="main-section">
-      <div class="card">
+      <section class="card">
         <h2 class="card-title">Background</h2>
         <ul class="background-info">
           <li>I am a technology enthusiast, gamer, novice front end web developer, and more.</li>
@@ -33,9 +33,9 @@
           <li>I have a passion for helping others and helping them become the best they can be.</li>
           <li>In my spare time, I code, play video games, and occasionally stream on <a href="https://www.twitch.com/atlasventure">Twitch</a>.</li>
         </ul>                
-      </div> 
+      </section> 
         
-      <div class="card">
+      <section class="card">
         <h2 class="card-title">Goals</h2>
         <p>During my tech degree training I want to learn about:</p>
         <ul class="skills">
@@ -50,7 +50,7 @@
           <li>and more!</li>
         </ul>
         <p>I want to bring this knowledge back to my current employer and revolutionize how we present our company to others.</p>
-      </div> 
+      </section> 
 
     </main>
     <footer class="main-footer">
@@ -59,7 +59,7 @@
         <li><a href="https://linkedin.com/in/adampizzo" class="social linkedin" target="_blank">LinkedIn</a></li>
         <li><a href="https://github.com/adampizzo" class="social github" target="_blank">Github</a></li>
       </ul>
-      <copyright class="copyright">&copy;2019, Adam Pizzo</copyright>
+      <small class="copyright">&copy;2019, Adam Pizzo</small>
     </footer>
   </body>
   </html>
