--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Adam Pizzo's Profile</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <head>
+    <meta charset="utf-8">
+    <title>Adam Pizzo's Profile</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+  </head>
   <body>
-
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Adam Pizzo</li>
           <li><a href="index.html">Home</a></li>
@@ -16,24 +16,32 @@
           <li><a href="#">Projects</a></li>
           <li><a href="stream.html">Stream</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header class="main-header">
       <img src="images/Portrait.jpg" alt="Picture of Adam Pizzo" class="profile-image">
       <h1 class="tag name">Adam Pizzo</h1>
       <p class="tag location">Coding out of Durham, NC</p>
     </header>
-<main>
 
+    <main class="main-section">
+      <section class="card">
+        <h3 class="card-title">Current Projects</h3>
+        <ul>
+          <li><a href="https://github.com/adampizzo/portfolio">Portfolio</a> - The current portfolio that you see here.</li>
+          <li><a href="https://github.com/adampizzo/lineage">Lineage Guild Website</a> - This is a website that I am endeavoring to build in my free time.</li>
+        </ul>
+      </section>
 
-</main>
-<footer class="main-footer">
-  <ul>
-    <li><a href="https://www.twitter.com/atlasventuretv" class="social twitter" target="_blank">Twitter</a></li>
-    <li><a href="https://linkedin.com/in/adampizzo" class="social linkedin" target="_blank">LinkedIn</a></li>
-    <li><a href="https://github.com/adampizzo" class="social github" target="_blank">Github</a></li>
-  </ul>
-  <copyright class="copyright">&copy;2019, Adam Pizzo</copyright>
-</footer>
-</body>
+    </main>
+
+    <footer class="main-footer">
+      <ul>
+        <li><a href="https://www.twitter.com/atlasventuretv" class="social twitter" target="_blank">Twitter</a></li>
+        <li><a href="https://linkedin.com/in/adampizzo" class="social linkedin" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/adampizzo" class="social github" target="_blank">Github</a></li>
+      </ul>
+      <small class="copyright">&copy;2019, Adam Pizzo</small>
+    </footer>
+  </body>
 </html>
